--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,80 @@
 body {
-    margin: 0;
-    padding: 0;
-    border: none;
+    background-color: #e6e6e6;
+}
+.quiz__wrapper {
+    margin-top: 10px;
+    border-radius: 5px;
+    background-color: #fff;
+    -webkit-box-shadow: 0px 0px 32px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 32px -4px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 32px -4px rgba(0,0,0,0.75);
+}
+h1 {
+    text-align: center;
+}
+label {
+    display: block;
+    font-weight: 400;
+    font-style: italic;
+}
+.quest {
+    font-size: 18px;
+}
+.modal-quest {
+    font-size: 16px;
+    font-weight: bold;
+}
+#submit {
+    display: block;
+    margin: 0 auto 15px 0;
+}
+#modal_form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    width: 300px;
+    height: 400px;
+    border-radius: 5px;
+    border: 2px #000 solid;
+    background: #fff;
+    display: none;
+    opacity: 0;
+    z-index: 5;
+    padding: 20px 10px;
+    -webkit-box-shadow: 0px 0px 32px -4px rgb(208, 204, 204);
+    -moz-box-shadow: 0px 0px 32px -4px rgb(208, 204, 204);
+    box-shadow: 0px 0px 32px -4px rgb(208, 204, 204);
+}
+#modal_close {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    cursor: pointer;
+    display: block;
+    background-color: #fff;
+    border: 2px solid black;
+    border-radius: 50%;
+    color: #de3939;
+    font-weight: bold;
+    line-height: 27px;
+    text-align: center;
+}
+#overlay {
+    z-index:3;
+    position:fixed;
+    background-color:#000;
+    opacity:0.8;
+    -moz-opacity:0.8;
+    filter:alpha(opacity=80);
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    cursor:pointer;
+    display:none;
 }
